<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text"
            style="@style/margin_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint_text"
            android:inputType="text" />
        <EditText
            android:id="@+id/email_edit_text"
            style="@style/margin_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint_text"
            android:inputType="text"/>

        <TextView
            style="@style/padding_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/topping_text"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/lettuce_checkbox"
            style="@style/margin_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/topping_1"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cheese_checkbox"
            style="@style/margin_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/topping_2"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/avocado_checkbox"
            style="@style/margin_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/topping_3"
            android:textSize="20sp" />

        <LinearLayout
            style="@style/margin_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrease_btn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/decrease_button" />

            <TextView
                android:id="@+id/quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/quantity_text_view_text"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/increase_btn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/increase_button" />

        </LinearLayout>

        <LinearLayout
            style="@style/margin_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_text_view_text"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/price_text"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/order_summary_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/order_summary_btn" />

        <Button
            android:id="@+id/order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/order_button" />

        <TextView
            android:id="@+id/order_summary"
            style="@style/padding_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
